--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -16,20 +16,45 @@
                     <div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div>
                 </div>
                 <div class="header-right">
-                    <a href="meu-perfil.html" class="btn btn-ghost active"><i class="fas fa-user"></i><span id="user-name">Carregando...</span></a>
-                    <button id="btn-sair" class="btn btn-ghost"><i class="fas fa-sign-out-alt"></i><span>Sair</span></button>
+                    <a href="meu-perfil.html" class="btn btn-ghost">
+                        <i class="fas fa-user"></i>
+                        <span id="user-name">Carregando...</span>
+                    </a>
+                    <button id="btn-sair" class="btn btn-ghost">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Sair</span>
+                    </button>
                 </div>
             </div>
         </header>
-        <div id="sidebar" class="sidebar">
+        <aside class="sidebar" id="sidebar">
             <nav class="sidebar-nav">
-                <a href="home.html" class="nav-item"><i class="fas fa-chart-line"></i><span>Dashboard</span></a>
-                <a href="cronograma.html" class="nav-item"><i class="fas fa-calendar-alt"></i><span>Cronograma</span></a>
-                <a href="exercicios.html" class="nav-item"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
-                <a href="dicas-estrategicas.html" class="nav-item"><i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
-                <a href="meu-perfil.html" class="nav-item active"><i class="fas fa-user-cog"></i><span>Meu Perfil</span></a>
+                <a href="home.html" class="nav-item">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Dashboard</span>
+                </a>
+                <a href="cronograma.html" class="nav-item">
+                    <i class="fas fa-calendar-alt"></i>
+                    <span>Cronograma</span>
+                </a>
+                <a href="exercicios.html" class="nav-item">
+                    <i class="fas fa-book-open"></i>
+                    <span>Exercícios</span>
+                </a>
+                <a href="discursivas.html" class="nav-item">
+                    <i class="fas fa-file-signature"></i>
+                    <span>Questões Discursivas</span>
+                </a>
+                <a href="dicas-estrategicas.html" class="nav-item">
+                    <i class="fas fa-bullseye"></i>
+                    <span>Dicas Estratégicas</span>
+                </a>
+                <a href="meu-perfil.html" class="nav-item">
+                    <i class="fas fa-user-cog"></i>
+                    <span>Meu Perfil</span>
+                </a>
             </nav>
-        </div>
+        </aside>
         <div id="sidebarOverlay" class="sidebar-overlay"></div>
 
         <main class="main-content">
