--- a/discursivas.html
+++ b/discursivas.html
@@ -39,48 +39,42 @@
                     <h1>Questões Discursivas</h1>
                     <p>Gere enunciados, pratique sua escrita e receba correções detalhadas da IA.</p>
                 </section>
-                
+
                 <div class="stats-grid">
                     <div class="stat-card"><div class="stat-header"><h3>Textos Corrigidos</h3></div><div class="stat-content"><span id="stat-discursivas-total" class="stat-number blue">0</span><span class="stat-subtitle">total</span></div></div>
                     <div class="stat-card"><div class="stat-header"><h3>Nota Média</h3></div><div class="stat-content"><span id="stat-discursivas-media" class="stat-number green">0.0</span><span class="stat-subtitle">de 10</span></div></div>
                 </div>
 
                 <div class="discursiva-container" style="margin-top: 32px;">
-                    <div class="feature-card">
-                        <div class="feature-header"><div class="feature-icon blue"><i class="fas fa-magic"></i></div><div class="feature-info"><h3>Gerador de Enunciados</h3><p>Crie uma questão discursiva com base nos seus critérios.</p></div></div>
-                        <form id="form-gerar-enunciado" style="margin-top: 20px;">
-                            <div class="form-grid">
-                                <div class="form-field-group"><label>Concurso Alvo</label><input type="text" id="discursiva-concurso" placeholder="Ex: Analista do Senado"></div>
-                                <div class="form-field-group"><label>Banca Examinadora</label><input type="text" id="discursiva-banca" placeholder="Ex: FGV"></div>
-                            </div>
-                            <div class="form-grid">
-                                <div class="form-field-group"><label>Matéria</label><input type="text" id="discursiva-materia" required placeholder="Ex: Direito Administrativo"></div>
-                                <div class="form-field-group"><label>Tópico Específico</label><input type="text" id="discursiva-topico" required placeholder="Ex: Licitações (Lei 14.133)"></div>
-                            </div>
-                            <div class="form-grid">
-                                <div class="form-field-group"><label>Tipo de Questão</label>
-                                    <select id="discursiva-tipo" required>
-                                        <option value="Questão Teórica">Questão Teórica</option>
-                                        <option value="Estudo de Caso">Estudo de Caso</option>
-                                        <option value="Dissertação Argumentativa">Dissertação Argumentativa</option>
-                                        <option value="Peça Prática (Jurídica)">Peça Prática (Jurídica)</option>
-                                        <option value="Parecer Jurídico">Parecer Jurídico</option>
-                                    </select>
+                    <button id="btn-abrir-form-discursiva" class="btn btn-primary" style="margin-bottom: 24px;">
+                        <i class="fas fa-plus"></i> Gerar Novo Enunciado
+                    </button>
+
+                    <div id="container-gerador-enunciado" style="display: none;">
+                        <div class="feature-card">
+                            <div class="feature-header"><div class="feature-icon blue"><i class="fas fa-magic"></i></div><div class="feature-info"><h3>Gerador de Enunciados</h3><p>Crie uma questão discursiva com base nos seus critérios.</p></div></div>
+                            <form id="form-gerar-enunciado" style="margin-top: 20px;">
+                                <div class="form-grid"><div class="form-field-group"><label>Concurso Alvo</label><input type="text" id="discursiva-concurso" placeholder="Ex: Analista do Senado"></div><div class="form-field-group"><label>Banca Examinadora</label><input type="text" id="discursiva-banca" placeholder="Ex: FGV"></div></div>
+                                <div class="form-grid"><div class="form-field-group"><label>Matéria</label><input type="text" id="discursiva-materia" required placeholder="Ex: Direito Administrativo"></div><div class="form-field-group"><label>Tópico Específico</label><input type="text" id="discursiva-topico" required placeholder="Ex: Licitações (Lei 14.133)"></div></div>
+                                <div class="form-grid"><div class="form-field-group"><label>Tipo de Questão</label><select id="discursiva-tipo" required><option value="Questão Teórica">Questão Teórica</option><option value="Estudo de Caso">Estudo de Caso</option><option value="Dissertação Argumentativa">Dissertação Argumentativa</option><option value="Peça Prática (Jurídica)">Peça Prática (Jurídica)</option><option value="Parecer Jurídico">Parecer Jurídico</option></select></div><div class="form-field-group"><label>Número de Linhas</label><select id="discursiva-linhas"><option>30</option><option>60</option><option>90</option></select></div><div class="form-field-group"><label>Nível de Dificuldade</label><select id="discursiva-dificuldade"><option>Fácil</option><option>Médio</option><option>Difícil</option></select></div></div>
+                                <div class="form-field-group"><label>Foco da Correção (Opcional)</label><textarea id="discursiva-foco" rows="2" placeholder="Ex: Foco na argumentação e uso de exemplos."></textarea></div>
+                                <div class="form-actions">
+                                    <button type="submit" class="btn btn-primary"><i class="fas fa-cogs"></i> Gerar Enunciado</button>
+                                    <button type="button" id="btn-cancelar-geracao" class="btn btn-ghost">Cancelar</button>
                                 </div>
-                                <div class="form-field-group"><label>Número de Linhas</label><select id="discursiva-linhas"><option>30</option><option>60</option><option>90</option></select></div>
-                                <div class="form-field-group"><label>Nível de Dificuldade</label><select id="discursiva-dificuldade"><option>Fácil</option><option>Médio</option><option>Difícil</option></select></div>
-                            </div>
-                            <div class="form-field-group"><label>Foco da Correção (Opcional)</label><textarea id="discursiva-foco" rows="2" placeholder="Ex: Foco na argumentação e uso de exemplos."></textarea></div>
-                            <button type="submit" class="btn btn-primary"><i class="fas fa-cogs"></i> Gerar Enunciado</button>
-                        </form>
+                            </form>
+                        </div>
                     </div>
 
-                    <div id="enunciado-container" style="display: none;"></div>
-                    <div id="area-resposta" style="display: none;">
-                        <h3>Sua Resposta:</h3><textarea id="resposta-discursiva" placeholder="Escreva sua resposta aqui..."></textarea>
-                        <button id="btn-corrigir-texto" class="btn btn-primary btn-large" style="margin: 16px auto; display: block;">Corrigir Texto</button>
+                    <div id="enunciado-container" class="feature-card" style="display: none; margin-top: 24px;"></div>
+                    <div id="area-resposta" style="display: none; margin-top: 24px;">
+                        <div class="feature-card">
+                            <h3>Sua Resposta:</h3>
+                            <textarea id="resposta-discursiva" placeholder="Escreva sua resposta aqui..."></textarea>
+                            <button id="btn-corrigir-texto" class="btn btn-primary btn-large" style="margin: 16px auto; display: block;">Corrigir Texto</button>
+                        </div>
                     </div>
-                    <div id="correcao-container" style="display: none;"></div>
+                    <div id="correcao-container" class="feature-card" style="display: none; margin-top: 24px;"></div>
                     
                     <div class="historico-discursivas-container feature-card" style="margin-top: 24px;">
                         <h2>Histórico de Correções</h2>
