feat: Adiciona páginas legais e atualiza marca para IAprovas

--- a/dicas-estrategicas.html
+++ b/dicas-estrategicas.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dicas Estratégicas - ConcursoIA</title>
+    <title>Dicas Estratégicas - IAprovas</title>
     <link rel="stylesheet" href="dashboard-lovable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
     <div class="dashboard-layout">
-        <header class="dashboard-header"><div class="header-content"><div class="header-left"><button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button><div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div></div><div class="header-right">
+        <header class="dashboard-header"><div class="header-content"><div class="header-left"><button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button><div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div></div><div class="header-right">
             <a href="meu-perfil.html" class="btn btn-ghost">
                 <i class="fas fa-user"></i>
                 <span id="user-name">Carregando...</span>
