--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - ConcursoIA</title>
+    <title>Login - IAprovas</title>
     <link rel="stylesheet" href="styles.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -12,8 +12,8 @@
         <div class="login-container">
             <div class="login-card">
                 <div class="login-header">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div>
-                    <h1>Entrar no ConcursoIA</h1>
+                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <h1>Entrar no IAprovas</h1>
                     <p>Faça login para acessar sua conta</p>
                 </div>
                 <form class="login-form" id="form-login"> 
