--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - ConcursoIA</title>
+    <title>Cadastro - IAprovas</title>
     <link rel="stylesheet" href="styles.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
         <div class="cadastro-container">
             <div class="cadastro-card">
                 <div class="cadastro-header">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div>
+                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
                     <h1>Criar Conta</h1>
                     <p>Cadastre-se para começar seus estudos</p>
                 </div>
@@ -36,7 +36,7 @@
                     <div class="checkbox-group">
                         <input type="checkbox" id="terms" name="terms" required>
                         <label for="terms">
-                            Aceito os <a href="#">termos de uso</a> e <a href="#">política de privacidade</a>
+                            Aceito os <a href="termos.html" target="_blank">termos de uso</a> e a <a href="privacidade.html" target="_blank">política de privacidade</a>
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary btn-full">Criar Conta</button>
