--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConcursoIA - Inteligência Artificial para Concursos</title>
+    <title>IAprovas - Inteligência Artificial para Concursos</title>
     <link rel="stylesheet" href="styles.css"> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     </head>
 <body>
@@ -11,7 +11,7 @@
             <div class="nav-wrapper">
                 <div class="logo">
                     <i class="fas fa-book-open"></i>
-                    <span>ConcursoIA</span>
+                    <span>IAprovas</span>
                 </div>
                 <nav class="nav-desktop">
                     <a href="#funcionalidades">Funcionalidades</a>
@@ -93,14 +93,14 @@
 
     <section id="depoimentos" class="testimonials">
          <div class="container"><div class="section-header"><h2>Histórias de Sucesso</h2><p>Conheça alguns dos nossos alunos.</p></div><div class="testimonials-grid">
-                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"O ConcursoIA revolucionou meus estudos! Os cronogramas personalizados me ajudaram muito."</p><div class="testimonial-author"><div class="avatar">AS</div><div class="author-info"><h4>Ana S.</h4><span>Aprovada TJ-SP</span></div></div></div>
+                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"O IAprovas revolucionou meus estudos! Os cronogramas personalizados me ajudaram muito."</p><div class="testimonial-author"><div class="avatar">AS</div><div class="author-info"><h4>Ana S.</h4><span>Aprovada TJ-SP</span></div></div></div>
                 <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"As dicas estratégicas foram incríveis. Consegui focar onde realmente precisava."</p><div class="testimonial-author"><div class="avatar">CL</div><div class="author-info"><h4>Carlos L.</h4><span>Aprovado RFB</span></div></div></div>
         </div></div>
     </section>
 
     <section id="sobre" class="about">
-         <div class="container"><div class="section-header"><h2>Sobre o ConcursoIA</h2><p>Metodologia comprovada encontra tecnologia de ponta</p></div><div class="about-content">
-                <div class="about-text"><h3>Nossa História</h3><p>O ConcursoIA nasceu da união entre metodologia comprovada de estudos para concursos e a mais avançada IA.</p><p>Baseado em livro especializado, nossa plataforma automatiza e personaliza estratégias de estudo.</p></div>
+         <div class="container"><div class="section-header"><h2>Sobre o IAprovas</h2><p>Metodologia comprovada encontra tecnologia de ponta</p></div><div class="about-content">
+                <div class="about-text"><h3>Nossa História</h3><p>O IAprovas nasceu da união entre metodologia comprovada de estudos para concursos e a mais avançada IA.</p><p>Baseado em livro especializado, nossa plataforma automatiza e personaliza estratégias de estudo.</p></div>
                 <div class="stats-card"><h4>Nossos Números</h4><div class="stats-grid"><div class="stat-item"><div class="stat-icon"><i class="fas fa-users"></i></div><div class="stat-number">1.000+</div><div class="stat-label">Aprovados</div></div><div class="stat-item"><div class="stat-icon"><i class="fas fa-book-open"></i></div><div class="stat-number">10+</div><div class="stat-label">Anos de Experiência</div></div></div></div>
         </div></div>
     </section>
@@ -108,11 +108,11 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-section"><div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div><p>Sua aprovação começa aqui.</p><div class="social-links"><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
+                <div class="footer-section"><div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div><p>Sua aprovação começa aqui.</p><div class="social-links"><a href="#"><i class="fab fa-facebook"></i></a><a href="#"><i class="fab fa-instagram"></i></a></div></div>
                 <div class="footer-section"><h4>Links</h4><ul><li><a href="#funcionalidades">Funcionalidades</a></li><li><a href="#planos">Planos</a></li></ul></div>
-                <div class="footer-section"><h4>Contato</h4><ul class="contact-list"><li><i class="fas fa-envelope"></i> contato@concursoia.com.br</li></ul></div>
+                <div class="footer-section"><h4>Contato</h4><ul class="contact-list"><li><i class="fas fa-envelope"></i> contato@iaprovas.com.br</li></ul></div>
             </div>
-            <div class="footer-bottom"><p>&copy; 2025 ConcursoIA. Todos os direitos reservados.</p><div class="footer-links"><a href="#">Privacidade</a><a href="#">Termos</a></div></div>
+            <div class="footer-bottom"><p>&copy; 2025 IAprovas. Todos os direitos reservados.</p><div class="footer-links"><a href="#">Privacidade</a><a href="#">Termos</a></div></div>
         </div>
     </footer>
     <script>
