--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Perfil - ConcursoIA</title>
+    <title>Meu Perfil - IAprovas</title>
     <link rel="stylesheet" href="dashboard-lovable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
             <div class="header-content">
                 <div class="header-left">
                     <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
-                    <div class="logo"><i class="fas fa-book-open"></i><span>ConcursoIA</span></div>
+                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
                 </div>
                 <div class="header-right">
                     <a href="meu-perfil.html" class="btn btn-ghost">
