fix: Reverte separação de credenciais do Firebase e as embute no config

--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
                     </button>
                     </div>
                 <div class="hero-stats">
-                    <div class="stat"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><span>4.9/5 estrelas</span></div>
-                    <div class="stat-divider"></div>
-                    <span>+1.000 aprovados</span>
-                    <div class="stat-divider"></div>
+                    <div class="stat"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div></div>
                     <span>Metodologia comprovada</span>
                 </div>
             </div>
@@ -72,13 +69,13 @@
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <div class="pricing-header"><h3>Gratuito (7 dias)</h3><div class="price"><span class="amount">R$0</span></div><p>Experimente o essencial</p></div>
-                    <ul class="features-list"><li><i class="fas fa-check"></i> Geração de Cronograma (limitado)</li><li><i class="fas fa-check"></i> Dica do Dia</li></ul>
+                    <ul class="features-list"><li><i class="fas fa-check"></i> Cronogramas Gerados por IA</li><li><i class="fas fa-check"></i> Exercícios Inteligentes</li><li><i class="fas fa-check"></i> Correção de Textos Discursivos</li><li><i class="fas fa-check"></i> Dicas Inteligentes</li></ul>
                     <button class="btn btn-outline btn-full" onclick="window.location.href='cadastro.html'">Testar Grátis por 7 Dias</button>
                 </div>
                 <div class="pricing-card popular">
                     <div class="popular-badge"><i class="fas fa-star"></i>Mais Popular</div>
                     <div class="pricing-header"><h3>Premium Mensal</h3><div class="price"><span class="currency">R$</span><span class="amount">49</span><span class="period">,90/mês</span></div><p>Acesso completo e flexível</p></div>
-                    <ul class="features-list"><li><i class="fas fa-check"></i> Todas funcionalidades IA</li><li><i class="fas fa-check"></i> Cronogramas ilimitados</li><li><i class="fas fa-check"></i> Exercícios Inteligentes (em breve)</li><li><i class="fas fa-check"></i> Correção de Textos (em breve)</li></ul>
+                    <ul class="features-list"><li><i class="fas fa-check"></i> Cronogramas Gerados por IA</li><li><i class="fas fa-check"></i> Exercícios Inteligentes</li><li><i class="fas fa-check"></i> Correção de Textos Discursivos</li><li><i class="fas fa-check"></i> Dicas Inteligentes</li></ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=mensal'">Assinar Mensal</button>
                 </div>
                 <div class="pricing-card">
@@ -93,15 +90,15 @@
 
     <section id="depoimentos" class="testimonials">
          <div class="container"><div class="section-header"><h2>Histórias de Sucesso</h2><p>Conheça alguns dos nossos alunos.</p></div><div class="testimonials-grid">
-                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"O IAprovas revolucionou meus estudos! Os cronogramas personalizados me ajudaram muito."</p><div class="testimonial-author"><div class="avatar">AS</div><div class="author-info"><h4>Ana S.</h4><span>Aprovada TJ-SP</span></div></div></div>
-                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"As dicas estratégicas foram incríveis. Consegui focar onde realmente precisava."</p><div class="testimonial-author"><div class="avatar">CL</div><div class="author-info"><h4>Carlos L.</h4><span>Aprovado RFB</span></div></div></div>
+                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"O IAprovas revolucionou meus estudos! Os cronogramas personalizados me ajudaram muito."</p><div class="testimonial-author"><div class="avatar">AS</div><div class="author-info"><h4>Adriano T.</h4><span>Aprovado Senado Federal</span></div></div></div>
+                <div class="testimonial-card"><div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div><p>"As dicas estratégicas foram incríveis. Consegui focar onde realmente precisava."</p><div class="testimonial-author"><div class="avatar">CL</div><div class="author-info"><h4> Felipe S.</h4><span>Aprovado TCDF</span></div></div></div>
         </div></div>
     </section>
 
     <section id="sobre" class="about">
          <div class="container"><div class="section-header"><h2>Sobre o IAprovas</h2><p>Metodologia comprovada encontra tecnologia de ponta</p></div><div class="about-content">
                 <div class="about-text"><h3>Nossa História</h3><p>O IAprovas nasceu da união entre metodologia comprovada de estudos para concursos e a mais avançada IA.</p><p>Baseado em livro especializado, nossa plataforma automatiza e personaliza estratégias de estudo.</p></div>
-                <div class="stats-card"><h4>Nossos Números</h4><div class="stats-grid"><div class="stat-item"><div class="stat-icon"><i class="fas fa-users"></i></div><div class="stat-number">1.000+</div><div class="stat-label">Aprovados</div></div><div class="stat-item"><div class="stat-icon"><i class="fas fa-book-open"></i></div><div class="stat-number">10+</div><div class="stat-label">Anos de Experiência</div></div></div></div>
+                <div class="stats-card"><h4>Números dos criadores do IA provas</h4><div class="stats-grid"><div class="stat-item"><div class="stat-icon"><i class="fas fa-users"></i></div><div class="stat-number">7+</div><div class="stat-label">Aprovações</div></div><div class="stat-item"><div class="stat-icon"><i class="fas fa-book-open"></i></div><div class="stat-number">14+</div><div class="stat-label">Anos de Experiência</div></div></div></div>
         </div></div>
     </section>
 
