fix: Melhora tratamento de erro no cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -39,6 +39,7 @@
                             Aceito os <a href="termos.html" target="_blank">termos de uso</a> e a <a href="privacidade.html" target="_blank">política de privacidade</a>
                         </label>
                     </div>
+                    <div id="error-message-cadastro" style="color: red; text-align: center; margin-bottom: 15px; display: none;"></div>
                     <button type="submit" class="btn btn-primary btn-full">Criar Conta</button>
                 </form>
                 <div class="cadastro-footer">
