--- a/cronograma.html
+++ b/cronograma.html
@@ -6,6 +6,7 @@
     <title>Cronogramas - IAprovas</title>
     <link rel="stylesheet" href="dashboard-lovable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 </head>
 <body>
     <div class="dashboard-layout">
