chore: Adiciona logs detalhados para depurar envio de email

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         const mobileNav = document.getElementById('mobileNav');
         if (mobileMenuBtn && mobileNav) {
             mobileMenuBtn.addEventListener('click', () => {
-                mobileNav.classList.toggle('open');
+                mobileNav.classList.toggle('show');
             });
         }
     </script>
