feat: Implementa a criação da sessão do Portal do Cliente Stripe

--- a/cancelado.html
+++ b/cancelado.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8"><title>Cancelado - IAprovas</title><link rel="stylesheet" href="styles.css"></head><body><div class="login-page"><h1>Pagamento Cancelado</h1><p>A assinatura não foi concluída. Você pode tentar novamente a qualquer momento.</p><a href="index.html#planos">Ver Planos</a></div></body></html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagamento Cancelado - IAprovas</title>
+    <link rel="stylesheet" href="dashboard-lovable.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="dashboard-layout">
+        <header class="dashboard-header">
+            <div class="header-content">
+                <div class="header-left">
+                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                </div>
+            </div>
+        </header>
+
+        <main class="main-content" style="margin-left: 0; display: flex; align-items: center; justify-content: center;">
+            <div class="content-wrapper" style="max-width: 500px; text-align: center;">
+                
+                <div class="feature-card">
+                    <div class="feature-header" style="justify-content: center;">
+                        <div class="feature-icon orange"><i class="fas fa-exclamation-triangle"></i></div>
+                    </div>
+
+                    <h1>Pagamento Cancelado</h1>
+                    <p style="font-size: 18px; color: #374151; margin-bottom: 24px;">
+                        Sua sessão de pagamento foi cancelada ou expirou. Nenhum valor foi cobrado.
+                    </p>
+                    
+                    <a href="index.html#planos" class="btn btn-primary" style="margin-bottom: 12px;">Ver Planos Novamente</a>
+                    <a href="index.html" class="btn btn-ghost">Voltar para o Início</a>
+                </div>
+
+            </div>
+        </main>
+    </div>
+</body>
+</html>
