--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -66,9 +66,9 @@
                             <div id="assinatura-info" style="margin-top: 20px;">
                                 <p><strong>Plano Atual:</strong> <span id="plano-atual-nome">Carregando...</span></p>
                                 <p>Acesse seu portal de cliente para alterar o plano, atualizar o método de pagamento ou cancelar sua assinatura.</p>
-                                <a href="#" id="link-gerenciar-assinatura" class="btn btn-outline" style="margin-top: 16px; width: 100%;">
+                                <button id="btn-gerenciar-assinatura" class="btn btn-outline" style="margin-top: 16px; width: 100%;">
                                     <i class="fas fa-cog"></i> Gerenciar Assinatura
-                                </a>
+                                </button>
                             </div>
                         </div>
                         <div class="feature-card">
