--- a/meu-perfil.html
+++ b/meu-perfil.html
@@ -56,6 +56,7 @@
                                 <div class="form-field-group"><label for="perfil-email">E-mail (não pode ser alterado)</label><input type="email" id="perfil-email" disabled></div>
                                 <div class="form-field-group"><label for="perfil-telefone">Telefone (Opcional)</label><input type="tel" id="perfil-telefone" placeholder="(00) 00000-0000"></div>
                                 <button type="submit" class="btn btn-primary" style="width: auto;"><i class="fas fa-save"></i> Salvar Informações</button>
+                                <div id="save-feedback" style="color: green; margin-top: 10px; display: none; font-weight: 500;"></div>
                             </form>
                         </div>
 
