--- a/exercicios.html
+++ b/exercicios.html
@@ -62,8 +62,15 @@
                     <div class="form-field-group"><label for="exercicio-materia">Matéria</label><input type="text" id="exercicio-materia" required placeholder="Ex: Direito Constitucional"></div>
                     <div class="form-field-group"><label for="exercicio-topico">Tópico Específico</label><input type="text" id="exercicio-topico" required placeholder="Ex: Artigo 5º, Direitos e Deveres Individuais e Coletivos"></div>
                     <div class="form-grid">
-                        <div class="form-field-group"><label for="exercicio-quantidade">Quantidade</label><input type="number" id="exercicio-quantidade" min="1" max="20" value="5"></div>
-                        <div class="form-field-group"><label for="exercicio-banca">Banca (Opcional)</label><input type="text" id="exercicio-banca" placeholder="Ex: Cespe, FGV"></div>
+                        <div class="form-field-group">
+                            <label for="exercicio-quantidade">Quantidade</label>
+                            <input type="number" id="exercicio-quantidade" min="1" max="10" value="5">
+                            <small style="color: #6b7280; font-size: 12px;">(Limite de 1 a 10 por vez)</small>
+                        </div>
+                        <div class="form-field-group">
+                            <label for="exercicio-banca">Banca (Opcional)</label>
+                            <input type="text" id="exercicio-banca" placeholder="Ex: Cespe, FGV">
+                        </div>
                     </div>
                     <div class="form-actions"><button type="submit" class="btn btn-primary">Gerar</button><button id="btn-fechar-form-exercicios" type="button" class="btn btn-ghost">Cancelar</button></div>
                 </form>
