feat: Adiciona contador de uso e corrige bug de feedback em cronogramas

--- a/cronograma.html
+++ b/cronograma.html
@@ -48,6 +48,7 @@
                 <section class="welcome-section">
                     <h1>Seus Cronogramas</h1>
                     <p>Gere um novo plano de estudos personalizado ou visualize seu histórico.</p>
+                    <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
                 <button id="btn-abrir-form-cronograma" class="btn btn-primary" style="margin-bottom: 24px;">
