feat: Adiciona contador de uso na página de exercícios

--- a/exercicios.html
+++ b/exercicios.html
@@ -47,6 +47,7 @@
                 <section class="welcome-section">
                     <h1>Prática de Exercícios</h1>
                     <p>Gere questões, resolva e acompanhe seu desempenho para focar nos pontos fracos.</p>
+                    <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
                 <div class="stats-grid">
