feat: Adiciona contador de uso na página de discursivas

--- a/discursivas.html
+++ b/discursivas.html
@@ -47,6 +47,7 @@
                 <section class="welcome-section">
                     <h1>Questões Discursivas</h1>
                     <p>Gere enunciados, pratique sua escrita e receba correções detalhadas da IA.</p>
+                    <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
                 <div class="stats-grid">
