--- a/dicas-estrategicas.html
+++ b/dicas-estrategicas.html
@@ -47,6 +47,7 @@
                 <section class="welcome-section">
                     <h1>Dicas Estratégicas</h1>
                     <p>Receba orientações personalizadas baseadas na metodologia de aprovação.</p>
+                    <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
                 <form id="gerador-dicas-form" class="gerador-dicas-container">
